# password_manager

./: CMakeLists.txt  note.txt
config/: db_config.json
include/: aes.h  db_manager.h  password_manager.h
src/: aes.cpp  db_manager.cpp  main.cpp  password_manager.cpp
